--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<div className="container">
+<!DOCTYPE html>
+<html>
       <Head>
         <title>yalla shoot live</title>
-        <link rel="icon" href="/favicon.ico" />
       </Head>
+<body>
+
+<div className="container">
+
 
       <main>
         <Header title="Welcome to Yalla Shoot Live" />
@@ -14,10 +18,11 @@ And also follow the Egyptian, Saudi and Moroccan league.
 
         </p>
       </main>
-
+    </div>
+      </body>
       <Footer>
   <p className="description">
     By Moka Templates
     </p>
   </Footer>
-    </div>
+</html>
